--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <label >Email: paul.v.payyappily@gmail.com</label><br>
          <label >GitHub : <a href="https://github.com/PaulvPayyappily" style="color: skyblue;">GITHUB-LINK</a></label><br>
          <label >Phone No: 99827XXXXX</label><br>
-         <label>Address:</label><br>
+         <label>Address: Ernakulam</label><br>
          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9158.67734580522!2d76.35269521291073!3d10.05765499641502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1734345432166!5m2!1sen!2sin" width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </iframe>
         </div>
