--- a/index.html
+++ b/index.html
@@ -5,160 +5,185 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resume</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="container">
-    <div class="left">
-      <div class="profile">
-        <div>
-        <h1>Paul V</h1>
-        <p class="title">Web Developer</p>
-        <p>A passionate software developer with a love for solving complex problems through code. </p>
-        </div>
-        <div >
-            <img src="images.png" alt="Profile Picture" class="profile-pic" />
-        </div>
+
+    <!-- Header -->
+    <div class="header">
+      <!-- Photo -->
+      <div class="header-photo">
+        <img src="images.png" alt="Profile Photo">
       </div>
-      <br>
-      <div class="section">
-        <h2 >Skills</h2>
-        <ol style="line-height: 1.6;">
-            <li>
-                <u>Technical Skills</u>
-                <ul>
-                <li>Proficient in HTML, CSS, and JavaScript</li>
-                <li>Experienced with Angular, React, Node.js, and Express.js</li>
-                <li>Familiar with databases like MySQL, PostgreSQL</li>
-                <li>Familiar with C, C++, C#, Java, Python, Unity, and Blender</li>
-                </ul>
-            </li>
-            <li>
-            <u>Soft Skills</u>
-            <ul>
-                <li>Ability to collaborate in cross-functional teams</li>
-                <li>Creative thinking and innovation</li>
-                <li>Excellent problem-solving and analytical abilities</li>
-            </ul>
-            </li>
-            <li>
-             <u>Additional Skills</u>
-            <ul>
-                <li>Fluent in Malayalam, Hindi, and English</li>
-            </ul>
-            </li>
-        </ol>
+
+      <!-- Name + Contact -->
+      <div class="header-left">
+        <h1>Paul .V. Payyappily</h1>
+        <div class="contact">
+      <p><i class="fa-solid fa-envelope"></i> <a href="mailto:paul.v.payyappily@gmail.com">paul.v.payyappily@gmail.com</a></p>
+      <p><i class="fa-solid fa-phone"></i> 8891232749</p>
+      <p><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/paul-v-payyappily-352390374/">LinkedIn</a></p>
+      <p><i class="fa-brands fa-github"></i> <a href="https://github.com/PaulvPayyappily">GitHub</a></p>
+    </div>
+      </div>
+
+      <!-- Logo -->
+      <div class="header-right">
+        <img src="logo.png" alt="College Logo">
+      </div>
     </div>
 
-
-
-      <div class="section">
-        <h2>Contact</h2>
-        <label >Email: paul.v.payyappily@gmail.com</label><br>
-         <label >GitHub : <a href="https://github.com/PaulvPayyappily" style="color: skyblue;">GITHUB-LINK</a></label><br>
-         <label >Phone No: 99827XXXXX</label><br>
-         <label>Address: Ernakulam</label><br>
-         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9158.67734580522!2d76.35269521291073!3d10.05765499641502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1734345432166!5m2!1sen!2sin" width="200" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </iframe>
-        </div>
-    </div>
-
-    <div class="right">
-      <div class="section">
-     <h2>Projects</h2>
-        <ol>
-        <li>
-            <span style="font-weight: bold;">Bookmyshow Replica</span>
-        <ul>
-        <li>Frontend: HTML, CSS, JS</li>
-        </ul>
-        </li>
-        <li>
-            <strong>To Do List</strong>
-        <ul>
-        <li>Frontend: HTML, CSS, JS</li>
-        </ul>
-         </li>
-        <li>
-          <strong>E-commerce</strong>
-         <ul>
-        <li>Frontend: React, Tailwind | Backend: Node.js, Express | Database: Postgres</li>
-        </ul>
-        </li>
-        <li>
-            <strong>Work Flow Managment System</strong>
-        <ul>
-        <li>Frontend: React, Tailwind | Backend: Node.js, Express | Database: Postgres</li>
-      </ul>
-     </li>
-        </ol>
-    </div>
-
-      <div class="section">
-        <h2>Education</h2>
-
-        <div class="education-entry">
-        <h3>B.Tech in Computer Science and Design Engineering</h3>
-        <p class="edu-sub">APJ Abdul Kalam Technological University &nbsp; | &nbsp; <em>Expected Graduation: 2026</em></p>
-        <ul>
-        <li><strong>Coursework:</strong> Data Structures, Algorithms, Web Development, Virtual Reality</li>
-     
-        </ul>
-        </div>
-
-        <div class="education-entry">
-         <h3>Higher Secondary School (12th Grade)</h3>
-        <p class="edu-sub">Central Board of Secondary Education &nbsp; | &nbsp; <em>Graduated: 2022</em></p>
-        <ul>
-        <li><strong>Stream:</strong> Science (Physics, Chemistry, Mathematics, Computer Science)</li>
-        <li><strong>Score:</strong> 85% in final exams</li>
-        </ul>
-        </div>
+    <!-- Personal Profile -->
+    <div class="section">
+      <h2>PERSONAL PROFILE</h2>
+      <p>
+        A dedicated Computer Science and Design Engineering student with a strong academic foundation, eager to begin a professional career in the tech and design industry. Skilled at integrating engineering principles with creative design thinking to develop innovative, user-centered solutions. Experienced in problem-solving and collaborating in multidisciplinary teams. A critical thinker, passionate about using technology to improve user experiences and drive innovation.
+      </p>
     </div>
 
     <div class="section">
-         <h2>Internship</h2>
-
-     <div class="internship-entry">
-     <h3>Web Development </h3>
-     <p class="intern-sub">Nest Digital &nbsp; | &nbsp; <em>16 Dec 2024 – 16 Jan 2025</em></p>
-        <ul>
-        <li>Worked on a real-time web application using Angular</li>
-        <li>Built responsive UI components with Tailwind CSS</li>
-        </ul>
+      <h2>EDUCATION</h2>
+      <ul>
+      <li>
+      <strong>Bachelor of Technology in Computer Science and Design Engineering | CGPA: 7.91/10.0</strong><br>
+      Federal Institute of Science and Technology, Ernakulam | Expected 2026
+      </li>
+      <li>
+      <strong>Little Hearts School, North Paravur, Ernakulam</strong><br>
+      CBSE — Class 12th: 82%, 2022<br>
+      CBSE — Class 10th: 85%, 2020
+      </li>
+      </ul>
     </div>
-    </div>
 
 
+    <!-- Technical Skills -->
+    <div class="section">
+      <h2>TECHNICAL SKILLS</h2>
+      <ul>
+        <li><strong>Languages:</strong> C | Python | Java | JavaScript | SQL</li>
+        <li><strong>Web Technologies:</strong> HTML5 | CSS3 | React | Node.js | Express.js | Tailwind CSS</li>
+        <li><strong>Databases & Tools:</strong> PostgreSQL | MySQL | Git | Unity</li>
+        <li><strong>Concepts:</strong> Data Structures & Algorithms, Object-Oriented Programming (OOP), Responsive Design, API Integration</li>
+      </ul>
     </div>
+
+    <!-- Internship -->
+    <div class="section">
+      <h2>INTERNSHIP EXPERIENCE</h2>
+      <p><strong>Web Development Intern</strong> | Nest Digital, Remote — Dec 2024 (1 month)</p>
+      <ul>
+        <li><strong>Developed 5+</strong> responsive web pages using Angular on E-commerce, Recipes, and Kerala Tourism topics, improving page load time by 20%.</li>
+        <li><strong>Built reusable UI components</strong> with TypeScript, HTML, Tailwind CSS, and Angular’s component architecture, reducing development time by 15%.</li>
+        <li>Gained hands-on experience in frontend design, API integration, and responsive web development.</li>
+        <li>
+          GitHub: 
+          <a href="https://github.com/PaulvPayyappily/nest-internship-angular" class="web-only">Internship Repo</a>
+          <span class="pdf-only">https://github.com/PaulvPayyappily/nest-internship-angular</span>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Projects -->
+    <div class="section">
+      <h2>PROJECTS</h2>
+      <ol>
+        <li>
+          <strong>Individual Projects</strong>
+          <ul>
+            <li><strong>Full-Stack E-commerce Platform</strong> (React, Node.js, Express, PostgreSQL, Tailwind CSS)
+              <ul>
+                <li>Engineered a responsive e-commerce website featuring authentication, product catalogs, and a shopping cart.</li>
+                <li>Built a RESTful backend with Express.js to handle CRUD operations.</li>
+                <li>
+                  GitHub: 
+                  <a href="https://github.com/PaulvPayyappily/E-commerce" class="web-only">E-commerce Repo</a>
+                  <span class="pdf-only">https://github.com/PaulvPayyappily/E-commerce</span>
+                </li>
+              </ul>
+            </li>
+            <li><strong>BookMyShow UI Clone</strong> (HTML, CSS, JavaScript)
+              <ul>
+                <li>Developed a pixel-perfect, responsive front-end clone of a popular ticket booking platform.</li>
+                <li>
+                  GitHub: 
+                  <a href="https://github.com/PaulvPayyappily/Basics-of-postgres-and-Node.js" class="web-only">BookMyShow Repo</a>
+                  <span class="pdf-only">https://github.com/PaulvPayyappily/Basics-of-postgres-and-Node.js</span>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <strong>Academic Projects</strong>
+          <ul>
+            <li><strong>Work Performance Monitoring System</strong>
+              <ul>
+                <li><strong>Objective:</strong> Create an automated platform for managers to assign tasks and monitor employee performance and project progress.</li>
+                <li><strong>Tools & Technologies:</strong> React, Node.js, Express, PostgreSQL, custom code for performance analysis, Gemini for report generation.</li>
+                <li><strong>Outcome:</strong> Developed a system that analyzes employee performance and project progress, generating detailed reports and improving manager review efficiency by 30%.</li>
+                <li><strong>Personal Learning:</strong> Experience in full-stack development, data analysis, and integrating third-party tools.</li>
+                <li>
+                  GitLab: 
+                  <a href="https://gitlab.com/csd24-25/work-productivity-monitoring-dashboard/Mini-project" class="web-only">Project Repo</a>
+                  <span class="pdf-only">https://gitlab.com/csd24-25/work-productivity-monitoring-dashboard/Mini-project</span>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ol>
+    </div>
+
+    <!-- Additional -->
+    <div class="section">
+      <h2>ADDITIONAL</h2>
+      <ul>
+        <li><strong>Coursework:</strong> Data Structures, Algorithms, Database Management Systems, Object-Oriented Programming.</li>
+        <li><strong>Interests:</strong> Traveling, Casual Sports, exploring new technologies and frameworks.</li>
+      </ul>
+    </div>
+
   </div>
-  <br>
 
- <div class="button-container">
-  <button id="downloadBtn">Download as PDF</button>
-</div>
+  <!-- Download Button -->
+  <div class="button-container">
+    <button id="downloadBtn">Download Resume (PDF)</button>
+  </div>
 
-
+  <!-- Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script>
-  const { jsPDF } = window.jspdf;
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-  document.getElementById('downloadBtn').addEventListener('click', () => {
-    const doc = new jsPDF('p', 'pt', 'a4');
-    const container = document.querySelector('.container');
+  <!-- PDF Export -->
+  <script>
+    const { jsPDF } = window.jspdf;
 
-    doc.html(container, {
-      callback: function (doc) {
-        doc.save('resume.pdf');
-      },
-      x: 10,
-      y: 10,
-      width: 570,
-      windowWidth: 900,
+    document.getElementById("downloadBtn").addEventListener("click", () => {
+      const resume = document.querySelector(".container");
+      const btn = document.querySelector(".button-container");
+
+      btn.style.display = "none"; // hide button during export
+
+      html2canvas(resume, {
+        scale: 3, // sharp text
+        useCORS: true
+      }).then(canvas => {
+        const imgData = canvas.toDataURL("image/png");
+        const pdf = new jsPDF("p", "mm", "a4"); // A4
+        const pageWidth = pdf.internal.pageSize.getWidth();
+        const pageHeight = pdf.internal.pageSize.getHeight();
+
+        // Fit screenshot to page
+        pdf.addImage(imgData, "PNG", 0, 0, pageWidth, pageHeight);
+
+        pdf.save("Paul_Resume.pdf");
+
+        btn.style.display = "flex"; // restore button
+      });
     });
-  });
-</script>
-
-
+  </script>
 </body>
 </html>
